# P0

./: b.txt
src/: BUILD.bazel  common.h  error_code.h  main.cpp  module.cpp  module.h
src/modules/hello/: BUILD.bazel  hello_world.cpp
